kubernetes/jenkins/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: jenkins
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`jenkins.local.syspawn.com`)
      kind: Rule
      services:
        - name: jenkins
          port: 8080
  tls:
    secretName: local-syspawn-com-tls
